# secureot-simple-inventory

./: .dockerignore  Cargo.toml  GUIA_DIDACTICA.md  OUI_DB.md  README.md  install.sh  inventario_a_excel.py
docker/: Dockerfile  README.md
scripts/: capture-10g.sh
src/: main.rs
systemd/: network-inventory-tune@.service  network-inventory.env.example  network-inventory@.service
