[package]
name = "network_inventory"
version = "0.2.0"
edition = "2021"
description = "Inventario de dispositivos de red por MAC/fabricante desde PCAP o captura en vivo"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
pcap = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rustc-hash = "1.1"
csv = "1.3"
ctrlc = "=3.4.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
